# bitfund

./: .gitignore  README.md  pyproject.toml
src/CPAPI/: test.py
src/TWSAPI/: test.py
src/bitfund/backtest/: data_fetcher.py  engine.py  main.py
src/bitfund/utils/: segmentation_r1.py  segmentation_r2.py  segmentation_running.py
src/daytran/: __init__.py
src/jupyter/: connection.ipynb  find_outperformer.ipynb  mstr.ipynb  segment_bitcoin.ipynb
src/jupyter/data/: bitcoin_2020-06-30_2025-06-29.csv  bitcoin_2020-06-30_2025-10-10.csv  bitcoin_readme.txt  nasdaq-bitcoin-5Y-20250503.csv
src/utils/: segmentation.py  ts_max_min.py
