[tool.poetry]
name = "bitfund"
version = "0.1.0"
description = ""
authors = ["edwin <edwinchanglu@gmail.com>"]
readme = "README.md"
packages = [
  { include = "bitfund", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.3"
ibind = "^0.1.13"
ib-insync = "^0.9.86"
matplotlib = "^3.10.1"
jupyterlab = "^4.4.4"
scipy = "^1.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]